--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "mongoose-private-paths": "^0.7.0",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.4.0",
+    "passport-twitter": "^1.0.4",
     "popper.js": "^1.12.9",
     "schema": "^0.2.1",
     "serve-favicon": "~2.4.5"
